# land-cover

./: .gitignore  README.md  TODO.txt  land-cover-change-buffer-from-csv.py  land-cover-change-buffer.ipynb  pyproject.toml
Tom/: ExecuteSpatialJoin_EffluxLakes_20240729_EDK.ipynb  download_SWOT_Prior_Lake_Database.py
land_cover/: distance.py  gee.py  geocode.py  land-cover-change-buffer-from-csv.py  load.py  plotting.py
notebooks/: Fix-name-errors.ipynb  GLAKES_join.ipynb  autocorrelation.ipynb  geometry.ipynb  lagos_explore.ipynb  land-cover-change-buffer.ipynb  mean_distance.ipynb  regression.ipynb  variography.ipynb
notebooks/concave_hull/notebooks/: concave_hull.ipynb
notebooks/data_exploration/: aleb_lakes_index.ipynb  greennessx2.ipynb
notebooks/joins/: join_Kurek_lakes.ipynb  join_WBD.ipynb  join_aleb_greenness.ipynb  join_geocode.ipynb
